[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameOverUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GameoverscreenImage.png" type="Texture" id=2]
[ext_resource path="res://Sprites/gameover_background.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=16]
font_path = "res://fonts/PipeDream-1Zwg.ttf"

[sub_resource type="DynamicFont" id=13]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://fonts/PipeDream-1Zwg.ttf"

[sub_resource type="DynamicFont" id=15]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 14 )

[node name="GameOverUI" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )

[node name="TweenLabelGameOver" type="Tween" parent="."]

[node name="TweenLabelTime" type="Tween" parent="."]

[node name="TweenLabelTimePlayed" type="Tween" parent="."]

[node name="TweenImage" type="Tween" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="LabelGameOver" type="Label" parent="."]
margin_left = 442.0
margin_top = 150.0
margin_right = 870.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 13 )
text = "Game Over!"
align = 1

[node name="LabelTime" type="Label" parent="."]
margin_left = 582.0
margin_top = 338.0
margin_right = 703.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 15 )
text = "Time:
"

[node name="LabelEnter" type="Label" parent="."]
margin_left = 582.0
margin_top = 566.0
margin_right = 716.0
margin_bottom = 683.0
custom_fonts/font = SubResource( 15 )
text = "Enter"

[node name="LabelTimePlayed" type="Label" parent="."]
margin_left = 544.0
margin_top = 404.0
margin_right = 753.0
margin_bottom = 521.0
custom_fonts/font = SubResource( 15 )
text = "0.0
"
align = 1
